[package]
name = "nj-vs-vh-page"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.4"
comrak = "0.21.0"
env_logger = "0.11.1"
itertools = "0.13.0"
jiff = "0.2.15"
kamadak-exif = "0.6.1"
log = "0.4.20"
rand = "0.8.5"
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.31"
slugify = "0.1.0"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "full"] }
tower-http = { version = "0.5.0", features = ["trace", "fs", "set-header"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "std"] }
